@@ -1,17 +1,18 @@
-# $NetBSD: Makefile,v 1.11 2018/07/28 14:40:49 brook Exp $
+# $NetBSD: Makefile,v 1.12 2019/07/31 19:55:15 brook Exp $
 
-CATEGORIES=	math
+CATEGORIES=	math R
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	${R_HOMEPAGE_BASE}/maps/
-COMMENT=	Display maps in R
+COMMENT=	Draw geographical maps
 LICENSE=	gnu-gpl-v2
 
 R_PKGNAME=	maps
-R_PKGVER=	2.3-9
+R_PKGVER=	3.3.0
 
 USE_TOOLS+=	gmake
 MAKE_ENV+=	AWK=${AWK:Q}
+USE_LANGUAGES=	c
 
 .include "../../math/R/Makefile.extension"
 .include "../../mk/bsd.pkg.mk"
