@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.7 2015/11/03 23:33:29 agc Exp $
+$NetBSD: distinfo,v 1.8 2019/07/31 19:55:15 brook Exp $
 
-SHA1 (R/maps_2.3-9.tar.gz) = f245b16f6ef1dd98bcc483a431276c139f74fbb9
-RMD160 (R/maps_2.3-9.tar.gz) = b923d8928e016b3b4e3aa106b4c9ea8cd3b88fc8
-SHA512 (R/maps_2.3-9.tar.gz) = 9fbbd98bb15af020698ecb2d210c491d95e7b2fb2340a95fc08679a19bc22fcbb5a7fb37dff66368021e3ceaaae5a81e97b42130a2f7fe39ed18d18bdaa884ec
-Size (R/maps_2.3-9.tar.gz) = 1428724 bytes
+SHA1 (R/maps_3.3.0.tar.gz) = a691cc1a4b3e57b52d202c587c7ef80ad0978ed6
+RMD160 (R/maps_3.3.0.tar.gz) = c4249d4f907742c8174a3e34034bc9b41b2e37ab
+SHA512 (R/maps_3.3.0.tar.gz) = 4310748976ab262f818de589d63d5a5b49bc356c5df0651b123124152701e4c2003387a5cb9b5e8b7fbd0ecc8bbe010c707fc86461f152d544451f1fa65ac647
+Size (R/maps_3.3.0.tar.gz) = 2493744 bytes
